# PyMasVis

./: .editorconfig  .flake8  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  masvis.py  pymasvis.py  pymasvis.service  pyproject.toml  requirements.txt  requirements_webapp.txt  setup.py
doc/: manual.md
pymasvis/: __init__.py  analysis.py  input.py  main.py  output.py  params.py  utils.py
res/: Cupcake.icns
src/: PyMasVis.py  analyze.py  spotidump.py  webapp.py
src/pymasvis/: analyze.py  gui.py  spotidump.py  widgets.py
src/templates/: base.html  error.html  index.html
tests/: conftest.py  test_render.py
