[tool.poetry]
name = "pymasvis"
version = "2.0.0"
description = "Python implementation of MasVis (https://www.lts.a.se/ljudteknik/masvis/)"
authors = ["Joakim Fors <joakim@fo.rs>"]
license = "GPL2"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
scipy = "^1.9.1"
numpy = "^1.23.2"
matplotlib = "^3.5.3"
Pillow = "^9.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
devtools = {extras = ["pygments"], version = "^0.9.0"}
black = "^22.8.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
autoflake = "^1.5.3"
mypy = "^0.971"

[tool.poetry.scripts]
pymasvis = "pymasvis.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
skip-string-normalization = true
target-version = ['py37']
include = '\.pyi?$'

[tool.isort]
line_length = 88
multi_line_output = 3
balanced_wrapping = true
combine_as_imports = true
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
